# demagic

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/skills/demagic/: SKILL.md
.github/workflows/: ci.yml
docs/plans/: 2026-06-12-demagic-v1.md
docs/specs/: 2026-06-12-demagic-design.md
evals/: README.md  golden_set.py  score_run.py  translate_eval.py
src/demagic/: __init__.py  agent_setup.py  cli.py  scan.py
src/demagic/analyze/: catalog.yaml  expressions.py  graph.py
src/demagic/ir/: models.py
src/demagic/ledger/: ledger.py
src/demagic/parser/: datasources.py  discovery.py  menus.py  program.py  program_headers.py
src/demagic/scaffold/: models_gen.py  project_gen.py  uispec_gen.py
src/demagic/translate/: agent.py  context.py  runner.py
src/demagic/verify/: checks.py  reconcile.py  report.py
tests/: conftest.py  test_agent_mode.py  test_cli.py  test_datasources.py  test_discovery.py  test_eval_harness.py  test_expressions.py  test_graph.py  test_ir.py  test_ledger.py  test_models_gen.py  test_models_tablename.py  test_program.py  test_program_headers.py  test_scaffold.py  test_scaffold_hostile.py  test_scan.py  test_scan_resilience.py  test_translate.py  test_verify.py
tests/fixtures/sample_repo/CustomerApp/: CustomerApp.xpaproj
tests/fixtures/sample_repo/CustomerApp/Source/: DataSources.xml  Menus.xml  Prg_1.xml  Prg_2.xml  ProgramHeaders.xml
