[project]
name = "demagic"
version = "0.1.0"
description = "Break the Magic spell - LLM-powered Magic xpa to Python migration with a 100% coverage ledger"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "demagic contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["magic-xpa", "legacy-migration", "transpiler", "llm", "modernization"]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic-ai-slim>=1.0",
    "ruff>=0.8",
]

[project.optional-dependencies]
anthropic = ["pydantic-ai-slim[anthropic]"]
openai = ["pydantic-ai-slim[openai]"]

[project.urls]
Homepage = "https://github.com/REPLACE-ME/demagic"
Issues = "https://github.com/REPLACE-ME/demagic/issues"

[project.scripts]
demagic = "demagic.cli:app"

[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0", "ty"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
