[project]
name = "demagic"
version = "0.1.0"
description = "Break the Magic spell - LLM-powered Magic xpa to Python migration with a 100% coverage ledger"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Anton (AntonKA) and demagic contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["magic-xpa", "unipaas", "edeveloper", "4gl", "legacy-migration", "modernization", "transpiler", "llm"]
# Light by default: no LLM SDK. The agent-driven flow (demagic init / pack /
# verify) needs none of it - your editor's AI agent does the translation.
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "ruff>=0.8",
]

[project.optional-dependencies]
# Optional headless translate mode (demagic translate --model ...). Most users
# don't need this - prefer the agent-driven flow.
api = ["pydantic-ai-slim>=1.0"]
anthropic = ["pydantic-ai-slim[anthropic]>=1.0"]
openai = ["pydantic-ai-slim[openai]>=1.0"]

[project.urls]
Homepage = "https://github.com/AntonKA/demagic"
Repository = "https://github.com/AntonKA/demagic"
Issues = "https://github.com/AntonKA/demagic/issues"

[project.scripts]
demagic = "demagic.cli:app"

[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[dependency-groups]
# pydantic-ai-slim is in dev so the optional-API tests run in CI.
dev = ["pytest>=8.0", "ty", "pydantic-ai-slim>=1.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
